...
"alert.walletNotSavedTitle" = "⚠️ Wallet Not Saved ⚠️";
"alert.wordsNotValid" = "Words not valid";
"alert.wordsNotValidMessage" = "The words you entered do not create a valid wallet. Please check the words and try again.";
"alert.yesGoBack" = "Yes, Go Back";
"common.areYouSure" = "Are you sure?";
"common.back" = "Back";
"common.cancel" = "Cancel";
"common.continue" = "Continue";
"common.copied" = "Copied";
"common.copy" = "Copy";
"common.delete" = "Delete";
"common.done" = "Done";
"common.goBack" = "Go Back";
"common.loading" = "loading…";
"common.next" = "Next";
"common.ok" = "OK";
"common.save" = "Save";
"details.advancedSubtitle" = "View current transaction breakdown";
...
"fee.title" = "Network Fee";
"import.action" = "Import wallet";
"import.instructions" = "Enter your recovery words below to restore your wallet. Make sure you're in a private location.";
"import.nfc" = "NFC";
"import.scanQr" = "Scan QR";
"import.selectNumberOfWords" = "Select Number of Words";
"import.title" = "Import Wallet";
"import.twelveWords" = "12 Words";
"import.twentyFourWords" = "24 Words";
"label.addLabel" = "Add label";
"label.deleteLabel" = "Delete";
"label.editLabel" = "Edit";
"menu.changePin" = "Change PIN";
...
"transaction.sentTo" = "Sent to";
"transaction.showDetails" = "Show Details";
"transaction.totalSpent" = "Total Spent";
"transaction.transactionPending" = "Transaction Pending";
"transaction.transactionReceived" = "Transaction Received";
"transaction.transactionSent" = "Transaction Sent";
"transaction.transactions" = "Transactions";
"transaction.unconfirmed" = "Unconfirmed";
"transaction.viewInExplorer" = "View in Explorer";
"transaction.whenReceived" = "When received";
"transaction.whenSent" = "When sent";
"utxo.changeAddress" = "Change Address";
"utxo.denotesChange" = "Denotes UTXO change";
...
